--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Material Kit React</title>
+    <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
