--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Material Kit React</title>
+    <title>Brian Angulo</title>
     <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
