Added hotjar and updated Resume download link

--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,22 @@
       drift.load("bst84u93pzvz");
     </script>
     <!-- End of Async Drift Code -->
+    <!-- Hotjar Tracking Code for www.brianangulo.com -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2414409, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
     <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
